[tool.poetry]
name = "astrolog"
version = "0.6.3"
description = "High-level astrology methods based on Swiss Ephemeris"
authors = ["Ign. Aiom Ominous <aiom.ominous@gmail.com>"]
keywords = ["astronomy", "swisseph", "astrology", "swissephemeris"]
classifiers = ["Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Intended Audience :: Science/Research",
               "License :: OSI Approved :: BSD License", "Topic :: Scientific/Engineering :: Astronomy"]
license = "BSD-4-Clause"

[tool.poetry.urls]
repository = "https://github.com/astro-pro/astrolog"

[tool.poetry.dependencies]
python = "^3.10"
dms2dec = "^0.1"
pyswisseph = "^2.10.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
